# rs-hdfs-report

./: .gitignore  .travis.yml  Cargo.toml  Dockerfile  README.md  docker-compose.lint-test.yml  docker-compose.yml  index.md  run.sh
config/: rs-hdfs-report-log.yml  rs-hdfs-report.toml  rs-hdfs-to-local-log.yml  rs-hdfs-to-local.toml
server/: README.md
servers/: README.md  docker-compose.yml
servers/hdfs-krb5/: krb5.keytab
src/: conf.rs  error.rs  main.rs
src/hdfs/: bits.rs  mod.rs
src/krb5/: mod.rs
src/util/: error.rs  mod.rs
