[package]
name = "rs-hdfs-report"
version = "0.1.0"
authors = ["Chen Weiguang <chen.weiguang@gmail.com>"]

[dependencies]
failure = "=0.1.1"
fruently = "=0.10.0"
lazy_static = "=1.0.0"
log = "=0.4.1"
mega-coll = { git = "https://github.com/guangie88/rs-mega-coll.git", branch = "json" }
regex = "=0.2.5"
serde = "=1.0.27"
serde_derive = "=1.0.27"
structopt = "=0.2.4"
structopt-derive = "=0.2.4"
which = { git = "https://github.com/fangyuanziti/which-rs.git", rev = "53d5123" }

[dev-dependencies]
indoc = "=0.2.3"

[[bin]]
name = "rs-hdfs-report"
path = "src/main.rs"