[package]
name = "rs-hdfs-report"
version = "0.1.0"
authors = ["Chen Weiguang <chen.weiguang@gmail.com>"]

[dependencies]
failure = "=0.1.1"
fruently = "=0.10.0"
lazy_static = "=1.0.0"
log = "=0.4.1"
mega-coll = { git = "https://github.com/guangie88/rs-mega-coll.git", tag = "v0.3.0" }
regex = "=0.2.10"
serde = "=1.0.33"
serde_derive = "=1.0.33"
structopt = "=0.2.5"
structopt-derive = "=0.2.5"
which = { git = "https://github.com/fangyuanziti/which-rs.git", rev = "53d5123" }

[dev-dependencies]
indoc = "=0.2.3"

[[bin]]
name = "rs-hdfs-report"
path = "src/main.rs"